[gd_scene load_steps=2 format=3 uid="uid://dmhylq05vrvs2"]

[ext_resource type="Script" uid="uid://ub2k6n2d4ld1" path="res://control.gd" id="1_0fbet"]

[node name="菜单" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -50.5
offset_right = 36.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "开始游戏"

[node name="options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "设置"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "退出"

[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
